Bug 1795179 - Make some elements non-splittable r=m_kato

One of the reason of bug 1793873 is, `HTMLEditUtils::IsSplittableNode` returns
`false` for `<textarea>`.  Then, `insertParagraph` etc command with `Selection`
collapsed in `<textarea>` causes splitting the `<textarea>` and it's not split
at same parent.

Then, I found that we need to take care `<button>` specially.  It creates a
block formatting context, and it's a form control so that it should never be
split.  Therefore, `HTMLEditor::GetAncestorElement` requires to take care of
`<button>` element with additional scan option for minimizing the risk.

Differential Revision: https://phabricator.services.mozilla.com/D159229