editor/libeditor/HTMLEditUtils.cpp
@@ -1664,7 +1664,8 @@ Element* HTMLEditUtils::GetAncestorElement(
     const Element* aAncestorLimiter /* = nullptr */) {
   MOZ_ASSERT(
       aAncestorTypes.contains(AncestorType::ClosestBlockElement) ||
-      aAncestorTypes.contains(AncestorType::MostDistantInlineElementInBlock));
+      aAncestorTypes.contains(AncestorType::MostDistantInlineElementInBlock) ||
+      aAncestorTypes.contains(AncestorType::ButtonElement));
 
   if (&aContent == aAncestorLimiter) {
     return nullptr;
@@ -1675,13 +1676,15 @@ Element* HTMLEditUtils::GetAncestorElement(
   Element* lastAncestorElement = nullptr;
   const bool editableElementOnly =
       aAncestorTypes.contains(AncestorType::EditableElement);
-  const bool lookingForClosesetBlockElement =
+  const bool lookingForClosestBlockElement =
       aAncestorTypes.contains(AncestorType::ClosestBlockElement);
   const bool lookingForMostDistantInlineElementInBlock =
       aAncestorTypes.contains(AncestorType::MostDistantInlineElementInBlock);
   const bool ignoreHRElement =
       aAncestorTypes.contains(AncestorType::IgnoreHRElement);
-  auto isSerachingElementType = [&](const nsIContent& aContent) -> bool {
+  const bool lookingForButtonElement =
+      aAncestorTypes.contains(AncestorType::ButtonElement);
+  auto IsSearchingElementType = [&](const nsIContent& aContent) -> bool {
     if (!aContent.IsElement() ||
         (ignoreHRElement && aContent.IsHTMLElement(nsGkAtoms::hr))) {
       return false;
@@ -1690,15 +1693,17 @@ Element* HTMLEditUtils::GetAncestorElement(
         !EditorUtils::IsEditableContent(aContent, EditorType::HTML)) {
       return false;
     }
-    return (lookingForClosesetBlockElement &&
+    return (lookingForClosestBlockElement &&
             HTMLEditUtils::IsBlockElement(aContent)) ||
            (lookingForMostDistantInlineElementInBlock &&
-            HTMLEditUtils::IsInlineElement(aContent));
+            HTMLEditUtils::IsInlineElement(aContent)) ||
+           (lookingForButtonElement &&
+            aContent.IsHTMLElement(nsGkAtoms::button));
   };
   for (Element* element : aContent.AncestorsOfType<Element>()) {
     if (editableElementOnly &&
         !EditorUtils::IsEditableContent(*element, EditorType::HTML)) {
-      return lastAncestorElement && isSerachingElementType(*lastAncestorElement)
+      return lastAncestorElement && IsSearchingElementType(*lastAncestorElement)
                  ? lastAncestorElement  // editing host (can be inline element)
                  : nullptr;
     }
@@ -1708,8 +1713,11 @@ Element* HTMLEditUtils::GetAncestorElement(
       }
       continue;
     }
+    if (lookingForButtonElement && element->IsHTMLElement(nsGkAtoms::button)) {
+      return element;  // closest button element
+    }
     if (HTMLEditUtils::IsBlockElement(*element)) {
-      if (lookingForClosesetBlockElement) {
+      if (lookingForClosestBlockElement) {
         return element;  // closest block element
       }
       MOZ_ASSERT_IF(lastAncestorElement,
@@ -1722,7 +1730,7 @@ Element* HTMLEditUtils::GetAncestorElement(
     }
     lastAncestorElement = element;
   }
-  return lastAncestorElement && isSerachingElementType(*lastAncestorElement)
+  return lastAncestorElement && IsSearchingElementType(*lastAncestorElement)
              ? lastAncestorElement
              : nullptr;
 }
@@ -1733,19 +1741,22 @@ Element* HTMLEditUtils::GetInclusiveAncestorElement(
     const Element* aAncestorLimiter /* = nullptr */) {
   MOZ_ASSERT(
       aAncestorTypes.contains(AncestorType::ClosestBlockElement) ||
-      aAncestorTypes.contains(AncestorType::MostDistantInlineElementInBlock));
+      aAncestorTypes.contains(AncestorType::MostDistantInlineElementInBlock) ||
+      aAncestorTypes.contains(AncestorType::ButtonElement));
 
   const Element* theBodyElement = aContent.OwnerDoc()->GetBody();
   const Element* theDocumentElement = aContent.OwnerDoc()->GetDocumentElement();
   const bool editableElementOnly =
       aAncestorTypes.contains(AncestorType::EditableElement);
-  const bool lookingForClosesetBlockElement =
+  const bool lookingForClosestBlockElement =
       aAncestorTypes.contains(AncestorType::ClosestBlockElement);
   const bool lookingForMostDistantInlineElementInBlock =
       aAncestorTypes.contains(AncestorType::MostDistantInlineElementInBlock);
+  const bool lookingForButtonElement =
+      aAncestorTypes.contains(AncestorType::ButtonElement);
   const bool ignoreHRElement =
       aAncestorTypes.contains(AncestorType::IgnoreHRElement);
-  auto isSerachingElementType = [&](const nsIContent& aContent) -> bool {
+  auto IsSearchingElementType = [&](const nsIContent& aContent) -> bool {
     if (!aContent.IsElement() ||
         (ignoreHRElement && aContent.IsHTMLElement(nsGkAtoms::hr))) {
       return false;
@@ -1754,26 +1765,34 @@ Element* HTMLEditUtils::GetInclusiveAncestorElement(
         !EditorUtils::IsEditableContent(aContent, EditorType::HTML)) {
       return false;
     }
-    return (lookingForClosesetBlockElement &&
+    return (lookingForClosestBlockElement &&
             HTMLEditUtils::IsBlockElement(aContent)) ||
            (lookingForMostDistantInlineElementInBlock &&
-            HTMLEditUtils::IsInlineElement(aContent));
+            HTMLEditUtils::IsInlineElement(aContent)) ||
+           (lookingForButtonElement &&
+            aContent.IsHTMLElement(nsGkAtoms::button));
   };
 
   // If aContent is the body element or the document element, we shouldn't climb
   // up to its parent.
   if (editableElementOnly &&
       (&aContent == theBodyElement || &aContent == theDocumentElement)) {
-    return isSerachingElementType(aContent)
+    return IsSearchingElementType(aContent)
                ? const_cast<Element*>(aContent.AsElement())
                : nullptr;
   }
 
+  if (lookingForButtonElement && aContent.IsHTMLElement(nsGkAtoms::button)) {
+    return const_cast<Element*>(aContent.AsElement());
+  }
+
   // If aContent is a block element, we don't need to climb up the tree.
   // Consider the result right now.
-  if (HTMLEditUtils::IsBlockElement(aContent) &&
+  if ((lookingForClosestBlockElement ||
+       lookingForMostDistantInlineElementInBlock) &&
+      HTMLEditUtils::IsBlockElement(aContent) &&
       !(ignoreHRElement && aContent.IsHTMLElement(nsGkAtoms::hr))) {
-    return isSerachingElementType(aContent)
+    return IsSearchingElementType(aContent)
                ? const_cast<Element*>(aContent.AsElement())
                : nullptr;
   }
@@ -1784,11 +1803,11 @@ Element* HTMLEditUtils::GetInclusiveAncestorElement(
   if (!aContent.GetParent() ||
       (editableElementOnly && !EditorUtils::IsEditableContent(
                                   *aContent.GetParent(), EditorType::HTML)) ||
-      (!lookingForClosesetBlockElement &&
+      (!lookingForClosestBlockElement &&
        HTMLEditUtils::IsBlockElement(*aContent.GetParent()) &&
        !(ignoreHRElement &&
          aContent.GetParent()->IsHTMLElement(nsGkAtoms::hr)))) {
-    return isSerachingElementType(aContent)
+    return IsSearchingElementType(aContent)
                ? const_cast<Element*>(aContent.AsElement())
                : nullptr;
   }
